samples/_failures_safe/1761337169_01585e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_596a6970.c: In function ‘main’:
./samples/SAFE/__tmp_596a6970.c:164:5: error: expected expression at end of input
  164 |     printGraph(&
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_596a6970.c:164:5: error: expected declaration or statement at end of input
